--- a/public/index.html
+++ b/public/index.html
@@ -1,41 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-XP4Q6W9RFC"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){
+      dataLayer.push(arguments);
+    }
+    gtag('js', new Date());
+    gtag('config', 'G-XP4Q6W9RFC');
+  </script>
     <meta charset="utf-8" />
-    <!-- <link rel="icon" href="%PUBLIC_URL%/favicon1.ico" /> -->
+    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />  
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta
-      name="Vedansh | Portfolio"
-      content="Web site created using create-react-app"
+      name="Iron Marvel | Mustafa Mahmood"
+      content="My name is Mustafa Mahmood aka Iron Marvel, and this is my Portfolio. I love Science, Technology, Engineering and Mathematics and I am trying to make this world a better place to live in for everyone through STEM. I am the CEO, CTO, Director and Manager of Arc Inc."
     />
-    <meta property="og:title" content="Vedansh | Portfolio" />
+    <meta property="og:title" content="Iron Marvel | Mustafa Mahmood" />
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://vvhacker007.github.io/portfolio/" />
-
-    <link rel="apple-touch-icon" sizes="57x57" href="/profile_photo_2.jpeg">
-    <link rel="apple-touch-icon" sizes="60x60" href="/profile_photo_2.jpeg">
-    <link rel="apple-touch-icon" sizes="72x72" href="/profile_photo_2.jpeg">
-    <link rel="apple-touch-icon" sizes="76x76" href="/profile_photo_2.jpeg">
-    <link rel="apple-touch-icon" sizes="114x114" href="/profile_photo_2.jpeg">
-    <link rel="apple-touch-icon" sizes="120x120" href="/profile_photo_2.jpeg">
-    <link rel="apple-touch-icon" sizes="144x144" href="/profile_photo_2.jpeg">
-    <link rel="apple-touch-icon" sizes="152x152" href="/profile_photo_2.jpeg">
-    <link rel="apple-touch-icon" sizes="180x180" href="/profile_photo_2.jpeg">
-    <link rel="icon" type="image/png" sizes="192x192" href="/profile_photo_2.jpeg">
-    <link rel="icon" type="image/png" sizes="32x32" href="/profile_photo_2.jpeg">
-    <link rel="icon" type="image/png" sizes="96x96" href="/profile_photo_2.jpeg">
-    <link rel="icon" type="image/png" sizes="16x16" href="/profile_photo_2.jpeg">
-    <link rel="manifest" href="/manifest.json">
-    <meta name="msapplication-TileColor" content="#ffffff">
-    <meta name="msapplication-TileImage" content="/profile_photo_2.jpeg">
+    <meta property="og:url" content="https://ironmarvel.github.io" />
+    <meta name="msapplication-TileColor" content="#000000">
+    <meta name="msapplication-TileImage" content="logo.jpg">
     <meta name="theme-color" content="#000000">
-
-    <!--
-      manifest.json provides metadata used when your web app is installed on a
-      user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
-    -->
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
@@ -43,30 +30,10 @@
     <script src="https://code.iconify.design/1/1.0.4/iconify.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/2.0.2/anime.js"></script>
     <script src="./canvasjs.min.js"></script>
-
-    <!--
-      Notice the use of %PUBLIC_URL% in the tags above.
-      It will be replaced with the URL of the `public` folder during the build.
-      Only files inside the `public` folder can be referenced from the HTML.
-
-      Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
-      work correctly both with client-side routing and a non-root public URL.
-      Learn how to configure a non-root public URL by running `npm run build`.
-    -->
-    <title>Vedansh | Portfolio</title>
+    <title>Iron Marvel | Mustafa Mahmood</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
-    <!--
-      This HTML file is a template.
-      If you open it directly in the browser, you will see an empty page.
-
-      You can add webfonts, meta tags, or analytics to this file.
-      The build step will place the bundled scripts into the <body> tag.
-
-      To begin the development, run `npm start` or `yarn start`.
-      To create a production bundle, use `npm run build` or `yarn build`.
-    -->
   </body>
 </html>
