--- a/public/index.html
+++ b/public/index.html
@@ -35,5 +35,6 @@
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
+    <!--<iframe style="border-radius:12px" src="https://open.spotify.com/embed/playlist/59MF8QDXPGuF9XK9eoSghU?utm_source=generator" width="50%" height="380" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>-->
   </body>
 </html>
